compiler/testData/diagnostics/tests/smartCasts/unstableSmartCastOnInvokeReceiver.diag.txt
/unstableSmartCastOnInvokeReceiver.kt:9:19: error: reference has a nullable type '(() -> Int)?', use explicit '?.invoke()' to make a function-like call instead
    someInterface.interfaceMethod()
                  ^^^^^^^^^^^^^^^
/unstableSmartCastOnInvokeReceiver.kt:12:23: error: reference has a nullable type '(() -> Int)?', use explicit '?.invoke()' to make a function-like call instead
        someInterface.interfaceMethod()
                      ^^^^^^^^^^^^^^^

